# ChangeLog for dev-ruby/actionpack
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.18 2005/11/04 13:41:22 caleb Exp $

*actionpack-1.10.2 (04 Nov 2005)

  04 Nov 2005; Caleb Tennis <caleb@gentoo.org> -actionpack-1.10.1.ebuild,
  +actionpack-1.10.2.ebuild:
  bump and remove previous version

  20 Oct 2005; Luca Barbato <lu_zero@gentoo.org> actionpack-1.9.1.ebuild:
  Marked ppc

*actionpack-1.10.1 (19 Oct 2005)

  19 Oct 2005; Caleb Tennis <caleb@gentoo.org> +actionpack-1.10.1.ebuild:
  Version bump

  23 Sep 2005; Caleb Tennis <caleb@gentoo.org> -actionpack-1.4.0.ebuild,
  -actionpack-1.5.0.ebuild, -actionpack-1.5.1.ebuild,
  -actionpack-1.6.0.ebuild, -actionpack-1.7.0.ebuild,
  -actionpack-1.8.1.ebuild:
  Remove old versions

  01 Aug 2005; Ferris McCormick <fmccor@gentoo.org> actionpack-1.9.1.ebuild:
  Add ~sparc keyword.

  27 Jul 2005; Caleb Tennis <caleb@gentoo.org> actionpack-1.9.1.ebuild:
  x86 stable

*actionpack-1.9.1 (12 Jul 2005)

  12 Jul 2005; Caleb Tennis <caleb@gentoo.org> +actionpack-1.9.1.ebuild:
  Version bump

  12 Jul 2005; David Holm <dholm@gentoo.org> actionpack-1.8.1.ebuild:
  Added to ~ppc.

*actionpack-1.8.1 (20 Apr 2005)

  20 Apr 2005; Rob Cakebread <pythonhead@gentoo.org>
  -actionpack-1.8.0.ebuild, +actionpack-1.8.1.ebuild:
  Version bump removed bad version.

*actionpack-1.8.0 (19 Apr 2005)

  19 Apr 2005; Rob Cakebread <pythonhead@gentoo.org>
  +actionpack-1.8.0.ebuild:
  Version bump.

  01 Apr 2005; Caleb Tennis <caleb@gentoo.org> actionpack-1.7.0.ebuild:
  x86 stable

*actionpack-1.7.0 (28 Mar 2005)

  28 Mar 2005; Rob Cakebread <pythonhead@gentoo.org>
  +actionpack-1.7.0.ebuild:
  Version bump.

*actionpack-1.6.0 (22 Mar 2005)

  22 Mar 2005; Caleb Tennis <caleb@gentoo.org> +actionpack-1.6.0.ebuild:
  version bump

*actionpack-1.5.1 (10 Mar 2005)

  10 Mar 2005; Rob Cakebread <pythonhead@gentoo.org> +actionpack-1.5.1.ebuild:
  Version bump.
