@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/actionpack-1.10.2.ebuild,v 1.1 2005/11/04 13:41:22 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/actionpack-1.11.0.ebuild,v 1.1 2005/11/08 13:10:18 caleb Exp $
 
 inherit ruby gems
 
@@ -17,4 +17,4 @@ KEYWORDS="~amd64 ~ppc ~sparc ~x86"
 IUSE=""
 
 DEPEND=">=dev-lang/ruby-1.8.2
-	>=dev-ruby/activesupport-1.2.2"
+	>=dev-ruby/activesupport-1.2.3"
