@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/activerecord-1.12.2.ebuild,v 1.1 2005/11/04 13:38:38 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/activerecord-1.13.0.ebuild,v 1.1 2005/11/08 13:08:51 caleb Exp $
 
 inherit ruby gems
 
@@ -18,4 +18,4 @@ IUSE=""
 RESTRICT="test"
 
 DEPEND=">=dev-lang/ruby-1.8.2
-	>=dev-ruby/activesupport-1.2.2"
+	=dev-ruby/activesupport-1.2.3"
