@@ -1,1 +1,0 @@
-MD5 948ebc69ef2d4c668b981aa1e741a779 activerecord-1.12.2.gem 281088
