@@ -1,0 +1,1 @@
+MD5 3620ec6296dcd21ac3bb2203c25c24cc activerecord-1.13.0.gem 318464
