@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/activerecord
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.16 2005/11/04 13:38:38 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.17 2005/11/08 13:08:51 caleb Exp $
+
+*activerecord-1.13.0 (08 Nov 2005)
+
+  08 Nov 2005; Caleb Tennis <caleb@gentoo.org> -activerecord-1.12.2.ebuild,
+  +activerecord-1.13.0.ebuild:
+  version bump
 
 *activerecord-1.12.2 (04 Nov 2005)
 
