@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/actionpack
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.18 2005/11/04 13:41:22 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.19 2005/11/08 13:10:18 caleb Exp $
+
+*actionpack-1.11.0 (08 Nov 2005)
+
+  08 Nov 2005; Caleb Tennis <caleb@gentoo.org> -actionpack-1.10.2.ebuild,
+  +actionpack-1.11.0.ebuild:
+  version bump
 
 *actionpack-1.10.2 (04 Nov 2005)
 
